--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ baseurl: /
 #
 
 # 你的博客logo图片URL，建议尺寸不超过300px × 300px
-avatar: https://xyyyyyyz.github.io/images/logo.png
+avatar: https://xyyyyyyz.github.io/images/logo.jpg
 
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
 favicon: https://xyyyyyyz.github.io/images/favicon.png
