--- a/_config.yml
+++ b/_config.yml
@@ -24,10 +24,10 @@ baseurl: /
 #
 
 # 你的博客logo图片URL，建议尺寸不超过300px × 300px
-avatar: https://xyyyyyyz.github.io/images/Lucky_star_yuki.jpg
+avatar: https://iumoy.github.io/images/Lucky_star_yuki.jpg
 
 # 你的favicon（出现在浏览器tab上）图片URL，建议使用较小(64px × 64px)的图片
-favicon: https://xyyyyyyz.github.io/images/favicon.png
+favicon: https://iumoy.github.io/images/favicon.png
 
 
 # 菜单中的按钮
