--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ footer-links:
   email: #youremailaddress@mail.com
   facebook: #https://www.facebook.com/<>
   flickr: #https://www.flickr.com/<>
-  github: xyyyyyyz #https://github.com/<>
+  github: iumoy #https://github.com/<>
   instagram: #https://instagram.com/<>
   linkedin: #https://www.linkedin.com/in/<>
   pinterest: #https://www.pinterest.com/<>
@@ -66,7 +66,7 @@ footer-links:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # 站点页脚的文字
-footer-text: Copyright (c) 2020 
+footer-text: Copyright (c) 2020 Syi
 
 #
 # 评论，注意，请不要同时添加多种不同的评论区
